--- a/src/templates/irasutoya.html
+++ b/src/templates/irasutoya.html
@@ -53,7 +53,7 @@
                                     <h6 class="m-0 font-weight-bold text-primary">Output</h6>
                                 </div>
                                 <div class="card-body">
-                                    <img id="result">
+                                    <img class="img-fluid" id="result">
                                 </div>
                             </div>
 
